<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <string name="app_name">Sandcat Predictor</string>

    <!-- DeviceListActivity -->
    <string name="title_paired_devices">Avaiable Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices</string>
    <string name="scanning">scanning for devices&#8230;</string>
    <string name="none_found">No devices found</string>

    <!-- BluetoothOscilloscope -->
    <string name="button_connect">Connect</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Oscilloscope.</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_connecting">connecting&#8230;</string>
    <string name="title_not_connected">not connected</string>
    <string name="title_failed">connection failed</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="status_label">Status</string>
    <string name="status_off">run</string>
    <string name="status_on">pause</string>
    <string name="timebase_default">200us</string>
    <string name="ch1_scale_default">200mV</string>
    <string name="ch2_scale_default">500mV</string>
    <string name="wifi_not_enabled_leaving">Sandcat is sad. Wifi cannot be enabled.</string>
    <string name="track1">1</string>
    <string name="track2">2</string>
    <string name="dec">dec</string>
    <string name="timebase_">Timebase:</string>
    <string name="_lt_">&lt;</string>
    <string name="up">up</string>
    <string name="_">></string>
    <string name="ch1_">CH1:</string>
    <string name="scale">Scale</string>
    <string name="postion">Position </string>
    <string name="down">down</string>
    <string name="ch2_">CH2:</string>
    <string name="inc">inc</string>
    <string name="wf_status_">WiFi AP status:</string>
    <string name="ECG">ECG</string>
    <string name="logo">Sandcat</string>

</resources>