<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="top" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/logo"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/Waveform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp" >

        <org.sandcat.phys.WaveformView
            android:id="@+id/WaveformArea"
            android:layout_width="214.5dp"
            android:layout_height="161.5dp"
            android:layout_marginLeft="15dp" />

        <TextView
            android:id="@+id/txt_ch1pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/WaveformArea"
            android:layout_marginLeft="5dp"
            android:text="@string/track1"
            android:textColor="@color/ch1_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_ch2pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/WaveformArea"
            android:layout_marginLeft="5dp"
            android:text="@string/track2"
            android:textColor="@color/ch2_color"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/run_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="45dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/status_label"
            android:textColor="@color/label_color" />

        <ToggleButton
            android:id="@+id/tbtn_runtoggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@+id/ToggleButton01"
            android:textOff="@string/status_off"
            android:textOn="@string/status_on" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/horizontal_settings"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/run_settings"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/horizontal_values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txt_timebase_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:gravity="center"
                android:text="@string/timebase_"
                android:textColor="@color/label_color" />

            <TextView
                android:id="@+id/txt_timebase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:gravity="center"
                android:text="@string/timebase_default"
                android:textColor="@color/timebase_color"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/horizontal_adjusts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_timebase_decrease"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:text="@string/_lt_" />

            <Button
                android:id="@+id/btn_timebase_increase"
                style="android:attr/buttonBarButtonStyleStyle"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:text="@string/_" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/position_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/run_settings"
        android:layout_below="@+id/horizontal_settings"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_position_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/postion"
            android:textColor="@color/label_color" />

        <Button
            android:id="@+id/btn_position_up"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:text="@string/up"
            android:textSize="4pt" />

        <Button
            android:id="@+id/btn_position_down"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:text="@string/down"
            android:textSize="4pt" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vertical_settings"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/horizontal_settings"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/horizontal_settings"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_position_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:gravity="center"
            android:text="@string/scale"
            android:textColor="@color/label_color" />

        <Button
            android:id="@+id/btn_scale_increase"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:text="@string/inc"
            android:textSize="4pt" />

        <Button
            android:id="@+id/btn_scale_decrease"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:text="@string/dec"
            android:textSize="4pt" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bluetooth_settings"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/imageView1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_btstatus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wf_status_"
            android:textColor="@color/status_color" />

        <Button
            android:id="@+id/button_connect"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:text="@string/button_connect" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_ch2_scale"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rbtn_ch2"
        android:layout_alignBottom="@+id/rbtn_ch2"
        android:layout_alignLeft="@+id/txt_ch1_scale"
        android:text="@string/ch2_scale_default"
        android:textColor="@color/ch2_color"
        android:textSize="7pt" />

    <TextView
        android:id="@+id/txt_ch1_scale"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rbtn_ch1"
        android:layout_alignBottom="@+id/rbtn_ch1"
        android:layout_toRightOf="@+id/rbtn_ch1"
        android:text="@string/ch1_scale_default"
        android:textColor="@color/ch1_color"
        android:textSize="7pt" />

    <RadioButton
        android:id="@+id/rbtn_ch2"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/txt_ch2_scale"
        android:text="@string/ch2_"
        android:textColor="@color/ch2_color"
        android:textSize="5pt" />

    <RadioButton
        android:id="@+id/rbtn_ch1"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_below="@+id/run_settings"
        android:layout_centerHorizontal="true"
        android:checked="true"
        android:text="@string/ch1_"
        android:textColor="@color/ch1_color"
        android:textSize="5pt" />

    <ImageView
        android:id="@+id/animationImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Waveform"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/ECG"
        android:visibility="visible" />

    <TextView
        android:id="@+id/hbeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Waveform"
        android:layout_toLeftOf="@+id/txt_ch2_scale" />
    
        <TextView
        android:id="@+id/hbeat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Waveform"
        android:layout_toLeftOf="@+id/hbeat" />

</RelativeLayout>